Bug Fixed Page Blogs

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,11 @@ nav .profile-link a {
     border-bottom: 1px solid black;
 }
 
+.grid-container {
+    max-width: 980px;
+    margin: auto;
+}
+
 /*----------------------------------------------- Home -----------------------------------------------*/
 
 .home-body {
