--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,8 @@ nav .profile-link a {
     text-align: center;
 }
 
+/*----------------------------------------------- Blogspot -----------------------------------------------*/
+
 .blogpost-img-container {
     padding: 0 50px 40px;
 }
@@ -208,6 +210,56 @@ nav .profile-link a {
 .blogpost-main-container h1{
     font-size: 35px;
 }
+
+/*----------------------------------------------- Profile -----------------------------------------------*/
+
+.profile-main {
+    display: grid;
+}
+
+.profile-main-container {
+    background-color: #e6e9ed;
+    padding: 70px 40px;
+}
+
+.profile-main-container .grid-container {
+    display: grid;
+    grid-template-columns: 350px 1fr;
+    justify-content: center;
+}
+
+.profile-img-container {
+    margin: auto;
+    grid-column: 1;
+}
+
+.profile-img-container img {
+    width: 100%;
+}
+
+.profile-description-container {
+    padding-left: 30px;
+    grid-column: 2;
+}
+
+.profile-proyects-container {
+    padding: 0 50px 40px;
+}
+
+.profile-main-proyect h3 {
+    border-bottom: 1px solid #cdd2da;
+    padding-bottom: 35px;
+    text-align: center;
+}
+
+.profile-main-proyect .proyect-container {
+    display: inline-block;
+    padding-left: 10px;
+    max-width: 30%;
+    margin-bottom: 50px;
+}
+
+/*----------------------------------------------- Contact -----------------------------------------------*/
 
 .contact-main-container {
     width: 100%;
@@ -237,54 +289,6 @@ nav .profile-link a {
     display: grid;
     grid-template-columns: 100px 1fr;
     max-width: 400px;
-}
-
-/*----------------------------------------------- Profile -----------------------------------------------*/
-
-.profile-main {
-    display: grid;
-}
-
-.profile-main-container {
-    background-color: #cdd2da;
-    padding: 50px 50px 40px;
-}
-
-.profile-main-container .grid-container {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    justify-content: center;
-}
-
-.profile-img-container {
-    margin: auto;
-    grid-column: 1;
-}
-
-.profile-img-container img {
-    width: 100%;
-}
-
-.profile-description-container {
-    padding-left: 30px;
-    grid-column: 2;
-}
-
-.profile-projects-container {
-    padding: 0 50px 40px;
-}
-
-.profile-projects-container h3 {
-    border-bottom: 1px solid #cdd2da;
-    padding-bottom: 20px;
-    text-align: center;
-}
-
-.profile-projects-container .project-container {
-    display: inline-block;
-    padding-left: 10px;
-    max-width: 30%;
-    margin-bottom: 50px;
 }
 
 /*----------------------------------------------- Footer -----------------------------------------------*/
